[package]
name = "IOKit-sys"
version = "0.1.4"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "FFI bindings for IOKit"
license = "MIT"
homepage = "https://github.com/dcuddeback/iokit-sys"
repository = "https://github.com/dcuddeback/iokit-sys"
readme = "README.md"
keywords = ["iokit", "system", "bindings", "hardware"]

links = "IOKit"
build = "build.rs"

[dependencies]
libc = "0.2"
mach = { git = "https://github.com/dhylands/mach", rev = "434f1e5149247350f1f99b066326658d63070a9e" } # until PR lands
CoreFoundation-sys = "0.1.3"
